--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/app": "^20.0.0",
     "@react-native-firebase/auth": "^20.0.0",
     "@react-native-firebase/database": "^20.0.0",
+    "@react-native-firebase/firestore": "^20.0.0",
     "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -30,7 +31,7 @@
     "expo-module-scripts": "^3.4.1",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
-    "firebase": "^10.12.1",
+    "firebase": "^10.12.2",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-icons": "^5.0.1",
@@ -47,7 +48,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
