--- a/app.json
+++ b/app.json
@@ -26,6 +26,7 @@
       "package": "com.odieteapp.fyp"
     },
     "web": {
+      "bundler": "metro",
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
