--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@expo/webpack-config": "~19.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "8.0.1",
@@ -35,6 +34,7 @@
     "firebase": "^10.12.2",
     "formik": "^2.4.5",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-native": "^0.74.2",
     "react-native-chart-kit": "^2.6.1",
