--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "styled-components": "^6.1.8",
-    "yup": "^1.4.0"
+    "xlsx": "^0.18.5",
+    "yup": "^1.4.0",
+    "expo-file-system": "~17.0.1",
+    "expo-sharing": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
