--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/hooks": "^3.0.0",
     "@react-native-firebase/app": "^20.0.0",
     "@react-native-firebase/auth": "^20.0.0",
     "@react-native-firebase/database": "^20.0.0",
@@ -27,9 +28,11 @@
     "expo-build-properties": "~0.12.3",
     "expo-camera": "~15.0.10",
     "expo-dev-client": "~4.0.15",
+    "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.5",
     "expo-module-scripts": "^3.4.1",
     "expo-permissions": "^14.4.0",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.2",
     "formik": "^2.4.5",
@@ -44,6 +47,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.12.3",
+    "react-native-permissions": "^4.1.5",
     "react-native-picker-select": "^9.0.1",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "4.10.1",
@@ -52,9 +56,7 @@
     "react-native-web": "~0.19.6",
     "styled-components": "^6.1.8",
     "xlsx": "^0.18.5",
-    "yup": "^1.4.0",
-    "expo-file-system": "~17.0.1",
-    "expo-sharing": "~12.0.1"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
