--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-dev-client": "~4.0.15",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.5",
+    "expo-media-library": "^16.0.3",
     "expo-module-scripts": "^3.4.1",
     "expo-permissions": "^14.4.0",
     "expo-sharing": "~12.0.1",
